# deezel

./: .gitignore  .gitmodules  ALKANES_ENHANCEMENT_PLAN.md  ALKANES_IMPLEMENTATION_SUMMARY.md  CORRECTED_SOLUTION_SUMMARY.md  Cargo.toml  DEEZEL_V5_ANALYSIS_SUMMARY.md  ENVELOPE_DEPLOYMENT_FIX.md  ENVELOPE_WITNESS_FIX_SUMMARY.md  README.md  RPC_URL_CONSISTENCY_FIX.md  SOLUTION_SUMMARY.md  TRUNCATION_IMPLEMENTATION.md  WALLET_IMPLEMENTATION.md  analyze_deezel_v5.py  analyze_working_tx.py  debug_armor.rs  final_test_wallet.gpg  get_transaction_bytes.py  logs.txt  mock_test_setup.sh  my_wallet.json  regtest_wallet.gpg  run_e2e_tests.sh  run_mock_tests.sh  run_tx_comparison.sh  test_enhanced_implementation.md  test_getbytecode.md  test_hex_flag.md  test_oylnet.sh  test_simple  test_wallet.gpg  test_wallet.json  verify_fix
crates/deezel/: Cargo.toml
crates/deezel-adapters/: Cargo.toml
crates/deezel-adapters/src/: filesystem.rs  http_rpc.rs  in_memory.rs  lib.rs  wasmtime_runtime.rs
crates/deezel-adapters/tests/: adapter_tests.rs  simple_integration_test.rs
crates/deezel-asc/: Cargo.toml
crates/deezel-common/: Cargo.toml  regtest_wallet.txt
crates/deezel-common/src/: address.rs  address_resolver.rs  bitcoind.rs  commands.rs  crypto.rs  esplora.rs  index_pointer.rs  keystore.rs  lib.rs  mock_provider.rs  monitor.rs  network.rs  ord.rs  pgp_rpgp.rs  provider.rs  rpc.rs  runestone.rs  runestone_analysis.rs  runestone_enhanced.rs  traits.rs  transaction.rs  utils.rs  wallet.rs
crates/deezel-common/src/alkanes/: amm.rs  analyze.rs  contract.rs  envelope.rs  execute.rs  fee_validation.rs  inspector.rs  mod.rs  parsing.rs  protorunes.rs  simulation.rs  token.rs  trace.rs  types.rs
crates/deezel-common/src/alkanes/inspector/: analysis.rs  mod.rs  runtime.rs  types.rs
crates/deezel-common/src/tests/: mock_provider.rs  mod.rs
crates/deezel-common/src/trace/: block.rs  types.rs
crates/deezel-common/src/utils/: hex.rs  mod.rs  protostone.rs
crates/deezel-common/src/vendored_ord/: inscription_id.rs  runes.rs
crates/deezel-common/tests/: address_parsing.rs  alkanes_execute_tests.rs  alkanes_execute_unit_tests.rs  bitcoind_rpc_tests.rs  concrete_provider_integration_tests.rs  debug_broadcast.rs  debug_decrypt_and_verify.rs  debug_encrypt_and_sign.rs  debug_reference_pattern.rs  debug_signed_message_reading.rs  integration_alkanes_execute.rs  integration_alkanes_execute.rs.bak  integration_tests.rs  keystore_encryption_test.rs  keystore_tests.rs  mock_provider.rs  pgp_rpgp_tests.rs  test_config.rs  test_rebar_integration.rs  test_url_passing.rs
crates/deezel-core/: Cargo.toml
crates/deezel-core/src/: alkanes.rs  block_builder.rs  context.rs  lib.rs  rpc.rs  runtime.rs  traits.rs  wallet.rs
crates/deezel-core/tests/: integration_tests.rs
crates/deezel-pretty-print-macro/: Cargo.toml
crates/deezel-rpgp/: Cargo.toml
crates/deezel-sys/: Cargo.toml
crates/deezel-web/: .Cargo.toml.swp  Cargo.toml  README.md
crates/deezel/src/: alkanes.rs  alkanes_inspector.rs  cli.rs  commands.rs  config.rs  deployment.rs  main.rs  pretty_print.rs  providers.rs  rpc.rs  transaction.rs  wallet.rs
docs/: DEBUG_LOGGING.md  KEYSTORE_ARCHITECTURE.md  PGP_RPGP_FIXES.md  SCHNORR_SIGNATURE_FIX.md  UTXO_PARSING_FIX.md  browser-wallet-provider-system.md  envelope-bin-data-implementation.md  esplora-commands.md  rebar-labs-integration.md  wallet-backend-apis-analysis.md
examples/: .run-alkanes-execute.sh.swo  .run-alkanes-execute.sh.swp  .run-deezel-e2e.sh.swp  create-then-list-utxos.sh  deezel-v10-tx.hex  deezel-v2-tx.hex  deezel-v3-tex.hex  deezel-v4-tx.hex  deezel-v5-tx.hex  deezel-v6-tx.hex  deezel-v7-txid.txt  deezel-v8-tx.hex  deployment_example.md  fetch-balances.sh  fetch-enriched-balances.sh  free_mint.wasm  mock_metashrew_example.rs  rpc_backends_example.rs  rpc_discovery.rs  run-alkanes-execute.sh  run-deezel-e2e.sh  run-ord-e2e.sh  run-protorunes-by-outpoint.sh  run-runestone.sh  run-trace.sh  test-utxos.sh  tx.hex  working-tx.hex
memory-bank/: activeContext.md  gapAnalysis.md  implementationPlan.md  oylSdkParity.md  productContext.md  progress.md  projectSymmetry.md  projectbrief.md  systemPatterns.md  techContext.md  test_analysis.md
mocks/: blockcount.json  height.json  protorunes.json  spendables.json  trace.json  tx_hex.json
src/: address_resolver.rs  build.rs  build_contracts.rs  deploy.rs  lib.rs  main.rs  network.rs  runestone.rs  runestone_decoder.rs  runestone_enhanced.rs  runestone_input.rs  test_integration.rs  test_message_decoding.rs  test_ordinals_integration.rs  test_protostone_parsing.rs  test_runestone_construction.rs  test_runestone_encoding.rs
src/account/: encryption.rs  mod.rs
src/alkanes/: .execute.rs.swp  amm.rs  contract.rs  envelope.rs  execute.rs  fee_validation.rs  inspector.rs  mod.rs  simulation.rs  token.rs  types.rs
src/brc20/: mod.rs
src/cli/: mod.rs
src/collectible/: mod.rs
src/monitor/: mod.rs
src/rpc/: bitcoin.rs  esplora.rs  metashrew.rs  mod.rs
src/rune/: mod.rs
src/signer/: mod.rs
src/tests/: README.md  README_tx_comparison.md  WITNESS_ANALYSIS.md  WITNESS_FIX_SUMMARY.md  demo_rpc_truncation.rs  e2e_cli_tests.rs  e2e_deploy.rs  e2e_helpers.rs  integration_tests.rs  mock_metashrew.rs  mod.rs  test_alkanes_e2e.rs  test_alkanes_fee_debug.rs  test_alkanes_indexer_parsing.rs  test_blocks.rs  test_commit_reveal_script_path.rs  test_deezel_v2_comparison.rs  test_deezel_v3_comparison.rs  test_deezel_v4_comparison.rs  test_deezel_v5_comparison.rs  test_envelope_bin_data.rs  test_envelope_deployment_debug.rs  test_envelope_deployment_fix.rs  test_envelope_fee_issue.rs  test_envelope_witness_corruption.rs  test_envelope_witness_structure.rs  test_esplora_commands.rs  test_fee_debug_simple.rs  test_p2tr_signing.rs  (+7 more)
tests/: account_test.rs  alkanes_execute_e2e.rs  alkanes_execute_regtest.rs  alkanes_test.rs  brc20_test.rs  cli_integration_tests.rs  collectible_test.rs  diesel_simple_test.rs  diesel_test.rs  dummy_envelope.wasm  metashrew_test.rs  protorunes_e2e.rs  rune_test.rs  runestone_e2e.rs  test_alkanes_inspect.rs
(+214 files in other folders)
