[package]
name = "deezel-cli"
version = "0.1.0"
edition = "2021"
description = "A Bitcoin wallet CLI tool for automated DIESEL token minting and management"
authors = ["Deezel Team"]

[dependencies]
# Core Bitcoin functionality - using rust-bitcoin directly
bitcoin = "0.32.6"
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs" }

# Cryptography and wallet functionality
secp256k1 = { version = "0.29", features = ["rand", "recovery"] }
bip39 = "2.0"
pbkdf2 = "0.12"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"

# GPG functionality (optional)
gpgme = { version = "0.11", optional = true }

# Async runtime
tokio = { version = "1.28", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command-line argument parsing
clap = { version = "4.3", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
hex = "0.4"
async-trait = "0.1"
dirs = "5.0"
base64 = "0.22"

# Alkanes-rs crates
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
protobuf = "=3.7.1"

# WASM runtime for alkane inspection
wasmtime = "25.0"
wasmprinter = "0.2"
wat = "1.0"
sha3 = "0.10"

# Test dependencies
[dev-dependencies]
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["gpg"]
gpg = ["gpgme"]
