[package]
name = "deezel"
version = "0.1.0"
edition = "2021"
description = "A Bitcoin wallet CLI tool for automated DIESEL token minting and management"
authors = ["Deezel Team"]

[dependencies]
# Core Bitcoin functionality - using rust-bitcoin directly
bitcoin = "0.32.6"
ordinals = { version = "0.5.2", path = "../alkanes-rs/crates/ordinals" }
protorune-support = { version = "0.5.2", path = "../alkanes-rs/crates/protorune-support" }

# Cryptography and wallet functionality
secp256k1 = { version = "0.29", features = ["rand", "recovery"] }
bip39 = "2.0"
pbkdf2 = "0.12"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"

# GPG functionality (optional)
gpgme = { version = "0.11", optional = true }

# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Command-line argument parsing
clap = { version = "4.3", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Utilities
hex = "0.4"
async-trait = "0.1"
dirs = "5.0"
base64 = "0.22"
regex = "1.10"
flate2 = "1.0"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }

# Alkanes-rs crates
alkanes-support = { version = "0.5.2", path = "../alkanes-rs/crates/alkanes-support" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
protobuf = "=3.7.1"

# WASM runtime for alkane inspection
wasmtime = "25.0"
wasmprinter = "0.2"
wat = "1.0"
sha3 = "0.10"

# Test dependencies
[dev-dependencies]

[features]
default = ["gpg"]
gpg = ["gpgme"]
