# Deezel Monorepo Workspace
# 
# This workspace contains:
# - deezel: CLI binary crate with system calls and argument parsing
# - deezel-common: Core library with all business logic for WASM compatibility
#
# The deezel-common crate contains all the actual logic and can be compiled to WASM,
# while the deezel crate provides the CLI interface and system-specific implementations.

[workspace]
members = [
  "crates/deezel",
  "crates/deezel-common",
  "crates/deezel-web",
  "crates/deezel-sys"
, "crates/deezel-asc", "crates/deezel-pretty-print-macro"]
exclude = ["reference"]
resolver = "2"

[workspace.dependencies]
# Core Bitcoin functionality
bitcoin = { version = "0.32.6", features = ["serde"] }
bitcoin_hashes = "0.14.0"
bech32 = "0.11.0"
ordinals = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "kungfuflex/serde" }
protorune-support = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "kungfuflex/serde" }
psbt-v2 = "0.1.1"
bitcoincore-rpc = "0.18.0"
tabled = "0.15.0"

# Cryptography and wallet functionality
secp256k1 = { version = "0.29", features = ["rand", "recovery"] }
bip39 = { version = "2.0", package = "tiny-bip39" }
pbkdf2 = "0.12"
aes-gcm = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
sha2 = "0.10"

# Async runtime
tokio = { version = "1.28", features = ["macros", "rt", "time", "sync"] }
futures = "0.3"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"

# Utilities
hex = "0.4"
async-trait = "0.1"
base64 = "0.22"
regex = "1.10"
flate2 = "1.0"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
spin = "0.9.8"
url = "2.5.0"
smallvec = "1.13"

# Testing-specific dependencies
mockall = "0.13.0"

# Alkanes-rs crates
alkanes-support = { git = "https://github.com/kungfuflex/alkanes-rs", branch = "kungfuflex/serde" }
metashrew-support = { git = "https://github.com/sandshrewmetaprotocols/metashrew" }
protobuf = "3.7.2"
protobuf-json-mapping = "3.7.2"

# WASM runtime for alkane inspection
wasmi = "0.47.0"
wasmprinter = "0.2"
wat = "1.0"
wasmparser = "0.235.0"
sha3 = "0.10"

# Web-sys for WASM compatibility
web-sys = { version = "0.3.70", features = [
  "ReadableStream",
  "Crypto",
  "SubtleCrypto",
  "CryptoKey",
  "Performance",
  "Location",
  "Navigator"
] }

# CLI-specific dependencies (only used by deezel crate)
clap = { version = "4.3", features = ["derive"] }
env_logger = "0.10"
dirs = "5.0"

# GPG functionality (only used by deezel crate)
gpgme = "0.11"
getrandom = { version = "0.2", features = ["js"] }

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]




