# Deezel Common Library
#
# This crate contains all the core business logic for the deezel project.
# It's designed to be WASM-compatible and provides trait abstractions
# for system calls, JSON-RPC, and disk I/O.
#
# Key features:
# - WASM-compatible (no std::fs, no tokio::process, etc.)
# - Trait-based abstractions for system dependencies
# - Pure business logic without CLI concerns
# - Can be imported into web applications

[package]
name = "deezel-common"
version = "0.1.0"
edition = "2021"
description = "Core deezel library for Bitcoin wallet operations, alkanes smart contracts, and blockchain interaction"
authors = ["Deezel Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/deezel-team/deezel"
keywords = ["bitcoin", "alkanes", "smart-contracts", "wallet", "blockchain"]
categories = ["cryptography::cryptocurrencies", "web-programming", "wasm"]

[lib]
name = "deezel_common"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core Bitcoin functionality
bitcoin = { workspace = true }
bitcoin_hashes = { workspace = true, package = "bitcoin-hashes" }
ordinals = { workspace = true }
protorune-support = { workspace = true }
deezel-asc = { path = "../deezel-asc", default-features = false, features = ["std"] }
deezel-pretty-print-macro = { path = "../deezel-pretty-print-macro" }
 
# Cryptography and wallet functionality
secp256k1 = { workspace = true }
bip39 = { workspace = true }
pbkdf2 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true, features = ["getrandom"] }
sha2 = { workspace = true }
 
psbt-v2 = { workspace = true }
 
# Async runtime (WASM-compatible features only)
futures = { workspace = true }

# Serialization/Deserialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
log = { workspace = true }

# Utilities
hex = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
smallvec = { workspace = true }
leb128 = { version = "0.2.5", default-features = false }

# Alkanes-rs crates
alkanes-support = { workspace = true }
metashrew-support = { workspace = true }
protobuf = { workspace = true }
protobuf-json-mapping = { workspace = true }

# WASM runtime for alkane inspection
wasmi = { workspace = true, optional = true }
wasmprinter = { workspace = true, optional = true }
wat = { workspace = true, optional = true }
sha3 = { workspace = true }
spin = { workspace = true, optional = true }
wasmparser = { workspace = true, optional = true }

# Additional dependencies for comprehensive functionality
dirs = { workspace = true, optional = true }
tempfile = { workspace = true, optional = true }
flate2 = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"], optional = true }
reqwest = { workspace = true, features = ["json", "rustls-tls"], optional = true, default-features = false }
url = { version = "2.5.0", optional = true }
clap = { workspace = true, features = ["derive"], default-features = false }
bitcoincore-rpc = { workspace = true, optional = true }

[features]
default = ["wasm-inspection", "native-deps", "std"]
std = []
wasm-inspection = ["wasmi", "wasmprinter", "wat", "spin", "wasmparser"]
native-deps = ["dirs", "tempfile", "tokio", "reqwest", "url", "bitcoincore-rpc", "std"]
web-compat = ["spin"]

test-utils = []

[dev-dependencies]
deezel-common = { path = ".", features = ["test-utils"] }
tokio = { workspace = true, features = ["macros", "rt", "time", "sync", "test-util"] }
env_logger = "0.10"
wiremock = "0.6.0"
mockall = { workspace = true }
bech32 = { workspace = true }
tempfile = { workspace = true }

# WASM-specific configuration
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
serde-wasm-bindgen = "0.6"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.2"
features = ["js"]


