[package]
name = "deezel"
version = "0.1.0"
edition = "2021"
authors = ["Deezel Team"]
description = "Bitcoin alkanes inspector and wallet CLI"
license = "MIT"

[[bin]]
name = "deezel"
path = "src/main.rs"

[dependencies]
deezel-common = { path = "../deezel-common" }
deezel-sys = { path = "../deezel-sys" }
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
bitcoin = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tabled = "0.15.0"
futures = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "sync"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
bitcoin = { workspace = true }
async-trait = "0.1"
reqwest = { workspace = true }
dirs = "5.0"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
regex = "1.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"
serde_json = "1.0"

[[test]]
name = "runestone_e2e"
path = "../../tests/runestone_e2e.rs"
harness = true
